# smart_microscopy_minimal

./: LICENSE  README.md  setup.cfg  setup.py  tox.ini
sm_minimal/: _function.py
sm_minimal/_tests/: test_function.py
smart_microscopy_minimal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
