[metadata]
name = smart_microscopy_minimal
author = Pradeep
author_email = pradeep.rajasekhar.monash.edu
license = BSD-3
url = https://github.com/pr4deepr/smart_microscopy_minimal
description = Minimal exampe of napari plugin on how to cut cookies
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/pr4deepr/smart_microscopy_minimal/issues
    Documentation = 'https://github.com/pr4deepr/smart_microscopy_minimal#README.md'
    Source Code = https://github.com/pr4deepr/smart_microscopy_minimal
    User Support = https://github.com/pr4deepr/smart_microscopy_minimal/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    smart_microscopy_minimal = sm_minimal
